--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1400 2019/08/21 12:41:24 adam Exp $
+# $NetBSD: Makefile,v 1.1401 2019/08/22 13:32:28 fcambus Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -164,6 +164,7 @@ SUBDIR+=	kdewebkit
 SUBDIR+=	khtml
 SUBDIR+=	kjs
 SUBDIR+=	kjsembed
+SUBDIR+=	kore
 SUBDIR+=	lhs
 SUBDIR+=	libecap
 SUBDIR+=	libghttp
