--- a/graphics/MesaLib/Makefile
+++ b/graphics/MesaLib/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.151 2019/08/22 09:59:47 nia Exp $
+# $NetBSD: Makefile,v 1.152 2019/08/22 17:24:01 nia Exp $
 
-DISTNAME=	mesa-18.3.4
+DISTNAME=	mesa-19.1.4
 PKGNAME=	${DISTNAME:S/mesa/MesaLib/}
-PKGREVISION=	1
 CATEGORIES=	graphics x11
 MASTER_SITES=	https://mesa.freedesktop.org/archive/
 EXTRACT_SUFX=	.tar.xz
@@ -12,8 +11,7 @@ HOMEPAGE=	https://www.mesa3d.org/
 COMMENT=	Open source OpenGL implementation
 LICENSE=	mit
 
-GNU_CONFIGURE=	yes
-USE_TOOLS+=	autoconf automake autoreconf bison pkg-config gmake flex
+USE_TOOLS+=	pkg-config
 USE_LANGUAGES=	c99 c++
 USE_LIBTOOL=	yes
 
@@ -29,33 +27,18 @@ PKGCONFIG_OVERRIDE+=	src/mesa/drivers/dri/dri.pc.in
 PKGCONFIG_OVERRIDE+=	src/mesa/drivers/osmesa/osmesa.pc.in
 PKGCONFIG_OVERRIDE+=	src/mesa/gl.pc.in
 
-CONFIGURE_ARGS+=		--enable-shared-glapi
-
-# Work around a buildlink and/or libtool bug:
-# In the libtool install/relink stage, if we want to link with two static
-# archives named libglapi.la but in different directories, bad things happen.
-SUBST_CLASSES+=			wrapper-bug
-SUBST_STAGE.wrapper-bug=	pre-configure
-SUBST_MESSAGE.wrapper-bug=	Renaming non-shared libglapi.la in Makefiles
-SUBST_FILES.wrapper-bug=	src/gallium/targets/libgl-xlib/Makefile.am
-SUBST_FILES.wrapper-bug+=	src/gallium/targets/osmesa/Makefile.am
-SUBST_FILES.wrapper-bug+=	src/glx/Makefile.am
-SUBST_FILES.wrapper-bug+=	src/mapi/Makefile.am
-SUBST_FILES.wrapper-bug+=	src/mesa/drivers/osmesa/Makefile.am
-SUBST_FILES.wrapper-bug+=	src/mesa/drivers/x11/Makefile.am
-SUBST_SED.wrapper-bug=		-e 's,shared-glapi/libglapi\.la,shared-glapi/libglapi_tmp_rename.la,g'
-SUBST_SED.wrapper-bug+=		-e 's,shared_glapi_libglapi_la,shared_glapi_libglapi_tmp_rename_la,g'
-SUBST_SED.wrapper-bug+=		-e 's,libglapi\.la,libglapi_impl.la,g'
-SUBST_SED.wrapper-bug+=		-e 's,libglapi_la,libglapi_impl_la,g'
-SUBST_SED.wrapper-bug+=		-e 's,libglapi_tmp_rename\.la,libglapi.la,g'
-SUBST_SED.wrapper-bug+=		-e 's,libglapi_tmp_rename_la,libglapi_la,g'
-
 # Replace /etc/drirc.d with ${PREFIX}/etc/drirc.d
 SUBST_CLASSES+=		drirc
 SUBST_STAGE.drirc=	pre-configure
 SUBST_MESSAGE.drirc=	Fixing hardcoded /etc/drirc.d references
 SUBST_FILES.drirc+=	src/util/xmlconfig.c
 SUBST_SED.drirc+=	-e 's|/etc|${PREFIX}/etc|g'
+
+SUBST_CLASSES+=		py
+SUBST_STAGE.py=		pre-configure
+SUBST_MESSAGE.py=	Fixing Python binary name
+SUBST_FILES.py+=	meson.build
+SUBST_VARS.py+=		PYTHONBIN
 
 CFLAGS.SunOS+=		-D__EXTENSIONS__ -D_POSIX_PTHREAD_SEMANTICS
 CXXFLAGS.SunOS+=	-Drestrict=__restrict__
@@ -66,40 +49,36 @@ LDFLAGS.SunOS+=		-lsocket -lnsl
 .include "options.mk"
 
 .if ${MACHINE_ARCH} == "i386"
-CONFIGURE_ARGS+=	--enable-glx-read-only-text
+MESON_ARGS+=	-Dglx-read-only-text=true
 .endif
 
-PYTHON_FOR_BUILD_ONLY=	yes
-BUILD_DEPENDS+=		${PYPKGPREFIX}-mako-[0-9]*:../../devel/py-mako
-# needed to build vulkan support
-BUILD_DEPENDS+=		${PYPKGPREFIX}-cElementTree-[0-9]*:../../textproc/py-cElementTree
-CONFIGURE_ENV+=		PYTHON=${PYTHONBIN}
-.include "../../lang/python/tool.mk"
+MESON_ARGS+=	-Dshared-glapi=true
 
-# Handle platforms without exp2
-.if !empty(MACHINE_PLATFORM:MNetBSD-[1-5].*-*)
-CPPFLAGS+=	-Dexp2\(x\)=exp\(\(x\)\*M_LN2\)
-CPPFLAGS+=	-Dexp2f\(x\)=expf\(\(x\)\*M_LN2\)
-.endif
+CPPFLAGS+=	-DHAVE_NOATEXIT
 
 # Work around Xorg segfaulting in radeon driver due to wrong alloca being used
 CFLAGS.NetBSD+=		-Dalloca=__builtin_alloca
 CXXFLAGS.NetBSD+=	-Dalloca=__builtin_alloca
 
+PYTHON_FOR_BUILD_ONLY=	yes
+BUILD_DEPENDS+=		${PYPKGPREFIX}-mako-[0-9]*:../../devel/py-mako
+# needed to build vulkan support
+BUILD_DEPENDS+=		${PYPKGPREFIX}-cElementTree-[0-9]*:../../textproc/py-cElementTree
+
 pre-configure:
 	touch ${WRKSRC}/src/glx/apple_dummy.cpp
-	cd ${WRKSRC} && autoreconf -vif
 
 DRIRC_DIR=		${PKG_SYSCONFDIR}/drirc.d
 EGDIR=			${PREFIX}/share/examples/mesa
 OWN_DIRS+=		${DRIRC_DIR}
 INSTALLATION_DIRS+=	${EGDIR}
-CONF_FILES+=		${EGDIR}/00-mesa-defaults.conf	\
-			  ${DRIRC_DIR}/00-mesa-defaults.conf
+CONF_FILES+=		${EGDIR}/00-mesa-defaults.conf \
+			${DRIRC_DIR}/00-mesa-defaults.conf
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/src/util/00-mesa-defaults.conf ${DESTDIR}${EGDIR}
 
+.include "../../devel/py-meson/build.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../textproc/expat/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
