--- a/devel/MoarVM/Makefile
+++ b/devel/MoarVM/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2019/08/11 13:18:37 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2019/08/22 22:33:15 ast Exp $
 
-DISTNAME=	MoarVM-2018.12
+DISTNAME=	MoarVM-2019.07.1
 PKGREVISION=	1
 CATEGORIES=	devel perl6
 MASTER_SITES=	http://www.moarvm.org/releases/
