--- a/lang/nqp/Makefile
+++ b/lang/nqp/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2019/08/11 13:21:22 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2019/08/22 22:33:15 ast Exp $
 
-DISTNAME=	nqp-2018.12
+DISTNAME=	nqp-2019.07.1
 PKGREVISION=	1
 CATEGORIES=	lang perl6
 MASTER_SITES=	http://rakudo.org/downloads/nqp/
