--- a/lang/rakudo/Makefile
+++ b/lang/rakudo/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2019/08/11 13:21:23 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2019/08/22 22:33:15 ast Exp $
 
-DISTNAME=	rakudo-2018.12
+DISTNAME=	rakudo-2019.07.1
 PKGREVISION=	1
 CATEGORIES=	lang perl6
 MASTER_SITES=	http://rakudo.org/downloads/rakudo/
