--- a/devel/boost-headers/Makefile
+++ b/devel/boost-headers/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.55 2019/08/23 01:08:50 schmonz Exp $
+# $NetBSD: Makefile,v 1.56 2019/08/23 03:08:40 ryoon Exp $
 
+PKGREVISION=		1
 BOOST_PACKAGE=		headers
 BOOST_COMMENT=		(build-time headers)
 BOOST_CONFIG=		generate
