--- a/misc/p5-Locale-libintl/Makefile
+++ b/misc/p5-Locale-libintl/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2019/08/11 13:21:58 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2019/08/23 11:07:04 adam Exp $
 
-DISTNAME=	libintl-perl-1.30
+DISTNAME=	libintl-perl-1.31
 PKGNAME=	p5-${DISTNAME:S/libintl-perl/Locale-libintl/}
-PKGREVISION=	1
 CATEGORIES=	misc devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Locale/}
 
