--- a/devel/py-ruamel-yaml/Makefile
+++ b/devel/py-ruamel-yaml/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.11 2019/08/13 22:50:51 gdt Exp $
+# $NetBSD: Makefile,v 1.12 2019/08/23 12:39:24 gdt Exp $
 
 DISTNAME=	ruamel.yaml-0.15.100
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/./-/1}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/ruamel.yaml/}
 
-MAINTAINER=	gde@llew.me
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://bitbucket.org/ruamel/yaml
 COMMENT=	YAML parser/emitter
 LICENSE=	mit
