--- a/databases/p5-DBD-postgresql/Makefile
+++ b/databases/p5-DBD-postgresql/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.89 2019/08/11 13:18:25 wiz Exp $
+# $NetBSD: Makefile,v 1.90 2019/08/23 13:15:05 adam Exp $
 
-DISTNAME=	DBD-Pg-3.7.4
+DISTNAME=	DBD-Pg-3.9.1
 PKGNAME=	p5-${DISTNAME:C/-Pg-/-postgresql-/}
-PKGREVISION=	2
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
