--- a/lang/ocaml/Makefile
+++ b/lang/ocaml/Makefile
@@ -1,19 +1,19 @@
-# $NetBSD: Makefile,v 1.126 2019/08/02 03:13:06 schmonz Exp $
+# $NetBSD: Makefile,v 1.127 2019/08/24 10:54:23 jaapb Exp $
 
 .include "Makefile.common"
 
-PKGREVISION=		4
-
-CONFIGURE_ENV+=		disable_x11=yes
+#CONFIGURE_ENV+=		disable_x11=yes
 
 BUILD_TARGET=		world
 MAKE_JOBS_SAFE=		no
 UNLIMIT_RESOURCES=	stacksize
 
 USE_TOOLS+=		bash
-USE_FEATURES+=		strnlen
+USE_LANGUAGES+=		c
+USE_LIBTOOL=		yes
+USE_GNU_CONFIGURE_HOST=	no
 
-USE_GCC_RUNTIME=	yes
+#USE_GCC_RUNTIME=	yes
 
 PLIST_VARS+=	ocaml-stub ocaml-prof ocaml-opt ocaml-nat ocaml-spacetime \
 		instrumented_runtime
@@ -37,13 +37,12 @@ PLIST.ocaml-stub=	yes
 .if (${MACHINE_ARCH} == "i386") || (${MACHINE_ARCH} == "powerpc") || \
     !empty(MACHINE_ARCH:M*arm*) || (${MACHINE_ARCH} == "aarch64") || \
     (${MACHINE_ARCH} == "x86_64")
-BUILD_TARGET+=	opt opt.opt
+BUILD_TARGET+=		opt opt.opt
 PLIST.ocaml-opt=	yes
 .  if empty(MACHINE_PLATFORM:MDarwin-*-powerpc) && \
       empty(MACHINE_PLATFORM:MSunOS-*-i386) && \
-      empty(MACHINE_PLATFORM:MNetBSD-*-sparc) && \
       (${MACHINE_ARCH} != "aarch64")
-PLIST.ocaml-prof=yes
+PLIST.ocaml-prof=	yes
 .  endif
 .endif
 
@@ -57,20 +56,20 @@ PLIST.ocaml-prof=yes
       (!empty(MACHINE_PLATFORM:MNetBSD-*-*) && empty(MACHINE_PLATFORM:MNetBSD-*-powerpc)) || \
       !empty(MACHINE_PLATFORM:MDarwin-*-*) || \
       !empty(MACHINE_PLATFORM:MSunOS-*-*)
-PLIST.ocaml-nat= yes
+PLIST.ocaml-nat=	yes
 .  endif
 .endif
 
 # Spacetime profiling is only available for native code on 64-bit targets.
 .if (${MACHINE_ARCH} == "x86_64") || (${MACHINE_ARCH} == "aarch64")
-PLIST.ocaml-spacetime= yes
+PLIST.ocaml-spacetime=	yes
 .endif
 
 # clock_gettime(2), required by POSIX, is necessary for the
 # instrumented_runtime feature.
 # It is missing on macOS before 10.12.
 .if ${OPSYS} != "Darwin" || ${OS_VERSION:R:R} >= 16
-PLIST.instrumented_runtime=yes
+PLIST.instrumented_runtime=	yes
 .endif
 
 # This is needed because ${WRKSRC}/build/partial-install.sh uses
@@ -84,7 +83,7 @@ PLIST.instrumented_runtime=yes
 INSTALL_MAKE_FLAGS+=	SHELL=${SH:Q}
 .endif
 
-INSTALLATION_DIRS=	${PKGMANDIR}/man1
+#INSTALLATION_DIRS=	${PKGMANDIR}/man1
 
 OPSYSVARS+=		EXTRA_RT_LIBS
 EXTRA_RT_LIBS.NetBSD=	-lcurses
@@ -100,18 +99,12 @@ REPLACE_AWK+=		tools/ocaml-instr-report
 do-test:
 	cd ${WRKSRC}/testsuite && ${MAKE_PROGRAM} all
 
-post-install:
-	set -e ; cd ${DESTDIR}${PREFIX}/lib/ocaml/${PKGMANDIR}/man1;	\
-	for m in *; do							\
-	  ln -sf ${PREFIX}/lib/ocaml/${PKGMANDIR}/man1/$$m		\
-		${DESTDIR}${PREFIX}/${PKGMANDIR}/man1/$$m;		\
-	done
-.if ${OPSYS} == Darwin
-	set -e; cd ${DESTDIR}${PREFIX}/lib/ocaml;			\
-	for l in *.so */*.so; do					\
-	  install_name_tool -id ${PREFIX}/lib/ocaml/$${l} $${l};	\
-	done
-.endif
+#post-install:
+#	set -e ; cd ${DESTDIR}${PREFIX}/lib/ocaml/${PKGMANDIR}/man1;	\
+#	for m in *; do							\
+#	  ln -sf ${PREFIX}/lib/ocaml/${PKGMANDIR}/man1/$$m		\
+#		${DESTDIR}${PREFIX}/${PKGMANDIR}/man1/$$m;		\
+#	done
 
 .include "../../mk/dlopen.buildlink3.mk"
 .include "../../mk/termcap.buildlink3.mk"
