--- a/www/eliom/Makefile
+++ b/www/eliom/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2019/05/13 11:55:44 jaapb Exp $
+# $NetBSD: Makefile,v 1.28 2019/08/24 11:07:34 jaapb Exp $
 #
 
 GITHUB_PROJECT=	eliom
@@ -16,7 +16,7 @@ USE_LANGUAGES=	c
 OCAML_USE_FINDLIB=	yes
 
 DEPENDS+=	ocsigen>=2.9:../../www/ocsigen
-DEPENDS+=	ocaml-deriving-ocsigen>=0.8.1:../../devel/ocaml-deriving-ocsigen
+#DEPENDS+=	ocaml-deriving-ocsigen>=0.8.1:../../devel/ocaml-deriving-ocsigen
 
 .include "../../mk/ocaml.mk"
 
