--- a/print/ja-a2ps/Makefile
+++ b/print/ja-a2ps/Makefile
@@ -1,16 +1,18 @@
-# $NetBSD: Makefile,v 1.21 2019/08/11 13:22:40 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2019/08/24 11:31:02 mef Exp $
 
 DISTNAME=	a2ps.pl-1.45
 PKGNAME=	ja-a2ps-1.45
-PKGREVISION=	8
+PKGREVISION=	9
 CATEGORIES=	japanese print
 MASTER_SITES=	ftp://ftp.sra.co.jp/pub/lang/perl/sra-scripts/
 EXTRACT_SUFX=	# None
-LICENSE=	mit
 
-MAINTAINER=	tech-pkg-ja@jp.NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 #HOMEPAGE=	http://www.srekcah.org/~utashiro/perl/scripts/a2ps_pl/
 COMMENT=	Text file to postscript converter (with Japanese support)
+LICENSE=	mit
+
+DEPENDS+=	nkf-[0-9]*:../../converters/nkf
 
 WRKSRC=		${WRKDIR}
 USE_TOOLS+=	perl:run
