--- a/devel/patchelf/Makefile
+++ b/devel/patchelf/Makefile
@@ -1,16 +1,15 @@
-# $NetBSD: Makefile,v 1.2 2016/10/10 00:05:31 mef Exp $
+# $NetBSD: Makefile,v 1.3 2019/08/24 23:44:51 ng0 Exp $
 
-DISTNAME=	patchelf-0.9
+DISTNAME=	patchelf-0.10
 CATEGORIES=	devel
 MASTER_SITES=	http://releases.nixos.org/patchelf/${PKGNAME_NOREV}/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://www.ohloh.net/p/patchelf
+HOMEPAGE=	https://nixos.org/patchelf.html
 COMMENT=	Modify the dynamic linker and RPATH of ELF binaries
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v3
 
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
-USE_TOOLS+=	gmake
 
 .include "../../mk/bsd.pkg.mk"
