--- a/sysutils/libnotify/Makefile
+++ b/sysutils/libnotify/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.54 2019/08/23 18:24:39 leot Exp $
+# $NetBSD: Makefile,v 1.55 2019/08/25 11:54:34 leot Exp $
 
 DISTNAME=	libnotify-0.7.8
+PKGREVISION=	1
 CATEGORIES=	sysutils gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libnotify/0.7/}
 EXTRACT_SUFX=	.tar.xz
@@ -9,8 +10,6 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://developer.gnome.org/libnotify/
 COMMENT=	Desktop notification framework
 LICENSE=	gnu-lgpl-v2.1
-
-TOOL_DEPENDS+=	gtk-doc-[0-9]*:../../textproc/gtk-doc
 
 CONFLICTS+=	libnotify07-[0-9]*
 SUPERSEDES+=	libnotify07-[0-9]*
@@ -26,8 +25,6 @@ MAKE_ENV+=		LD_LIBRARY_PATH=${WRKSRC}/output/${PKGBASE}
 .include "../../graphics/gdk-pixbuf2/buildlink3.mk"
 BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.26.0
 .include "../../devel/glib2/buildlink3.mk"
-BUILDLINK_DEPMETHOD.gobject-introspection=	build
-.include "../../devel/gobject-introspection/buildlink3.mk"
 BUILDLINK_DEPMETHOD.gtk3=	build
 .include "../../x11/gtk3/buildlink3.mk"
 .include "../../devel/py-meson/build.mk"
