--- a/multimedia/mkvtoolnix/Makefile
+++ b/multimedia/mkvtoolnix/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.134 2019/08/22 12:23:37 ryoon Exp $
+# $NetBSD: Makefile,v 1.135 2019/08/25 12:38:05 adam Exp $
 
-DISTNAME=	mkvtoolnix-36.0.0
-PKGREVISION=	1
+DISTNAME=	mkvtoolnix-37.0.0
 CATEGORIES=	multimedia
 MASTER_SITES=	https://mkvtoolnix.download/sources/
 EXTRACT_SUFX=	.tar.xz
