--- a/devel/patchelf/Makefile
+++ b/devel/patchelf/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2019/08/24 23:44:51 ng0 Exp $
+# $NetBSD: Makefile,v 1.4 2019/08/26 00:18:05 ng0 Exp $
 
 DISTNAME=	patchelf-0.10
 CATEGORIES=	devel
-MASTER_SITES=	http://releases.nixos.org/patchelf/${PKGNAME_NOREV}/
+MASTER_SITES=	https://nixos.org/releases/patchelf/${PKGNAME_NOREV}/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://nixos.org/patchelf.html
