--- a/graphics/R-farver/Makefile
+++ b/graphics/R-farver/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2023/06/11 10:57:10 mef Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/06 23:23:09 mef Exp $
 
 R_PKGNAME=	farver
-R_PKGVER=	2.1.1
+R_PKGVER=	2.1.2
 CATEGORIES=	graphics
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,6 +10,12 @@ LICENSE=	mit
 
 TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
 
 USE_LANGUAGES=	c++
 
